--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,41 @@ nav ul li a {
   text-shadow: 3px 2px 2px gray;
 }
 
+.navbar-area {
+  -webkit-background-size : cover;
+  background-size: 100%;
+  background-position: center center;
+}
+
+.about-area {
+  background-image: url(../img/bg_3.jpg);
+  -webkit-background-size : cover;
+  background-size: 80%;
+  background-position: center center;
+}
+
+.portfolio-area {
+  background-image: url(../img/bg_4.jpg);
+  -webkit-background-size : cover;
+  background-size: 80%;
+  background-position: center center; 
+}
+
+.services-area {
+  background-image: url(../img/bg_5.jpg);
+  -webkit-background-size : cover;
+  background-size: cover;
+  background-position: center center; 
+}
+
+.contact-area {
+  background-image: url(../img/bg_6.jpg);
+  -webkit-background-size : cover;
+  background-size: cover;
+  background-position: center center; 
+}
+
+
 .contact-area input[type=text], .contact-area input[type=email]{
   width : 30%;
   height : 40px;
@@ -114,6 +149,30 @@ nav ul li a {
   .contact-area textarea {
     width : 85%;
   }
+
+/*
+  Navbar
+  Date : 20190522
+  Director : 전형동
+*/
+.open{
+  font-size:60px;
+  cursor:pointer;
+  margin: 0 auto;
+  border:1px solid #FFF;
+  width:250px;
+  padding:10px 30px;
+  border-radius:10px;
+  text-align:center;
+  transition:1s;
+}
+.open:hover{
+  background:#FFF;
+  color:#fc00ff; 
+}
+
+
+
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px){
@@ -145,5 +204,98 @@ nav ul li a {
     width : 85%;
     height : 140px;
   }
+
+  .open{
+    font-size:60px;
+    cursor:pointer;
+    margin: 0 auto;
+    border:1px solid #FFF;
+    width:250px;
+    padding:10px 30px;
+    border-radius:10px;
+    text-align:center;
+    transition:1s;
+  }
+  .open:hover{
+    background:#FFF;
+    color:#fc00ff; 
+  }
+
 }
+
+
+/*
+  Full Screen Navbar
+  Date : 20190522
+  Director : 전형동
+*/
+
+body{
+    font-family: 'Oswald', sans-serif;
+    color:#FFF;
+    height:350px;
+    background:background: #fc00ff; 
+    background: -webkit-linear-gradient(to right, #00dbde,     #fc00ff); 
+    background: linear-gradient(to right, #00dbde, #fc00ff); 
+}
+h1{
+  margin:20% auto 5% auto;
+  text-align:center; 
+  font-size:4em;
+}
+.overlay{
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, .9);
+  height: 100vh;
+  transform:scale(0);
+  transition:.5s;
+}
+.content{
+  position: relative;
+  top: 20%;
+  text-align: center;
+}
+.overlay .content a { 
+  transition:1s;
+  text-decoration:none;
+  display:block;
+  color: #FFF;
+  font-size:3em;
+  margin-bottom: 2%;
+}
+.overlay .content a:hover { 
+  color:#fc00ff; 
+}
+.overlay .close{
+  position:absolute;
+  top: 0px; 
+  color:#FFF; 
+  right: 30px;
+  text-decoration:none;
+  transition:1s;
+  font-size:6em;
+}
+.overlay .close:hover{
+    color:#fc00ff; 
+}
+
+.open{
+  font-size:23px;
+  cursor:pointer;
+  margin: 0 auto;
+  border:1px solid #FFF;
+  width:100px;
+  padding:10px 30px;
+  border-radius:10px;
+  text-align:center;
+  transition:1s;
+}
+.open:hover{
+  background:#FFF;
+  color:#fc00ff; 
+}
+
 
