--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-h3{
+h2{
   color : #fff;
   font-size : 48px;
   font-family: Noto Sans;
@@ -59,23 +59,20 @@ nav ul li a {
   text-shadow: 3px 2px 2px gray;
 }
 
-.navbar-area {
-  -webkit-background-size : cover;
-  background-size: 100%;
-  background-position: center center;
-}
 
 .about-area {
   background-image: url(../img/bg_3.jpg);
   -webkit-background-size : cover;
-  background-size: 80%;
+  background-size: 40%;
+  background-repeat: no-repeat;
   background-position: center center;
 }
 
 .portfolio-area {
   background-image: url(../img/bg_4.jpg);
   -webkit-background-size : cover;
-  background-size: 80%;
+  background-repeat: no-repeat;
+  background-size: 60%;
   background-position: center center; 
 }
 
@@ -94,23 +91,18 @@ nav ul li a {
 }
 
 
-.contact-area input[type=text], .contact-area input[type=email]{
+/* .contact-area > input[type=text], .contact-area > input[type=email]{
   width : 30%;
   height : 40px;
   padding : 0 20px;
 }
 
-#navbar a:hover {
-  color : #000;
-  font-weight: bold;
-}
-
 .contact-area textarea {
   width : 30%;
   padding : 10px 20px;
-}
+} */
 
-.contact-area input[type=submit] {
+/* .contact-area input[type=submit] {
   background : saddlebrown;
   padding : 10px 50px;
   color : #fff;
@@ -118,6 +110,46 @@ nav ul li a {
   text-transform: uppercase;
   border : 0;
 }
+ */
+.btnBlock {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 50px;
+}
+
+.productBtn {
+  font-size: 20px;
+  font-weight: 700;
+  cursor:pointer;
+  margin: 0 auto;
+  border:1px solid #FFF;
+  width:150px;
+  height :40px;
+  padding:10px 30px;
+  border-radius:10px;
+  text-align:center;
+  transition:1s;
+  background:#FFF;
+  color:#000; 
+}
+
+.productBtn:hover {
+  font-size: 20px;
+  font-weight: 800;
+  cursor:pointer;
+  margin: 0 auto;
+  border:1px solid #FFF;
+  width:150px;
+  height :40px;
+  padding:10px 30px;
+  border-radius:10px;
+  text-align:center;
+  transition:1s;
+  background-color: rgba( 255, 255, 255, 0.5 );
+  color:#ECD123; 
+}
+
 
 /* responsive.css */
 
@@ -131,7 +163,7 @@ nav ul li a {
   .home-area h2 {
     font-size : 100px;
   }
-  h3 {
+  h2 {
     font-size : 90px;
   }
   .banner-area p {
@@ -150,28 +182,72 @@ nav ul li a {
     width : 85%;
   }
 
-/*
-  Navbar
-  Date : 20190522
-  Director : 전형동
-*/
-.open{
-  font-size:60px;
-  cursor:pointer;
-  margin: 0 auto;
-  border:1px solid #FFF;
-  width:250px;
-  padding:10px 30px;
-  border-radius:10px;
-  text-align:center;
-  transition:1s;
-}
-.open:hover{
-  background:#FFF;
-  color:#fc00ff; 
-}
+  .about-area {
+    -webkit-background-size : cover;
+    background-position: center center;
+  }
+  .portfolio-area {
+    -webkit-background-size : cover;
+    background-repeat: no-repeat;
+    background-size: 100vh;
+    background-position: center center; 
+  }
 
+  .benner-open{
+    font-size:60px;
+    cursor:pointer;
+    margin: 0 auto;
+    border:1px solid #FFF;
+    width:250px;
+    padding:10px 30px;
+    border-radius:10px;
+    text-align:center;
+    transition:1s;
+  }
+  .benner-open:hover{
+    background:#FFF;
+    color:#fc00ff; 
+  }
 
+  .pp-tableCell > .wrapper > h2 {
+    font-size: 90px;
+    margin-top: -300px;
+    text-align: center;
+  }
+
+  .productBtn {
+    font-size: 30px;
+    font-weight: 700;
+    cursor:pointer;
+    margin: 0 auto;
+    margin-bottom: 100px;
+    border:1px solid #FFF;
+    width:250px;
+    height :60px;
+    padding:10px 30px;
+    border-radius:10px;
+    text-align:center;
+    transition:1s;
+    background:#FFF;
+    color:#000; 
+  }
+
+  .productBtn:hover {
+    font-size: 30px;
+    font-weight: 700;
+    cursor:pointer;
+    margin: 0 auto;
+    margin-bottom: 100px;
+    border:1px solid #FFF;
+    width:250px;
+    height :60px;
+    padding:10px 30px;
+    border-radius:10px;
+    text-align:center;
+    transition:1s;
+    background-color: rgba( 255, 255, 255, 0.5 );
+    color:#ECD123; 
+  }
 
 }
 
@@ -185,7 +261,7 @@ nav ul li a {
   .home-area h2 {
     font-size : 100px;
   }
-  h3 {
+  h2 {
     font-size : 90px;
   }
   .banner-area p {
@@ -205,7 +281,7 @@ nav ul li a {
     height : 140px;
   }
 
-  .open{
+  .benner-open{
     font-size:60px;
     cursor:pointer;
     margin: 0 auto;
@@ -216,9 +292,60 @@ nav ul li a {
     text-align:center;
     transition:1s;
   }
-  .open:hover{
+  .benner-open:hover{
     background:#FFF;
     color:#fc00ff; 
+  }
+
+  .about-area {
+    -webkit-background-size : cover;
+    background-position: center center;
+  }
+  .portfolio-area {
+    -webkit-background-size : cover;
+    background-repeat: no-repeat;
+    background-size: 100vh;
+    background-position: center center; 
+  }
+
+  .pp-tableCell > .wrapper > h2 {
+    font-size: 90px;
+    margin-top: -300px;
+    text-align: center;
+  }
+
+  .productBtn {
+    font-size: 30px;
+    font-weight: 700;
+    cursor:pointer;
+    margin: 0 auto;
+    margin-bottom: 100px;
+    border:1px solid #FFF;
+    width:250px;
+    height :60px;
+    padding:10px 30px;
+    border-radius:10px;
+    text-align:center;
+    transition:1s;
+    background:#FFF;
+    color:#000; 
+  }
+
+  .productBtn:hover {
+    font-size: 30px;
+    font-weight: 700;
+    cursor:pointer;
+    margin: 0 auto;
+    margin-bottom: 100px;
+    border:1px solid #FFF;
+    width:250px;
+    height :60px;
+    padding:10px 30px;
+    border-radius:10px;
+    text-align:center;
+    transition:1s;
+    background-color: rgba( 255, 255, 255, 0.5 );
+    color:#ECD123; 
   }
 
 }
@@ -230,19 +357,6 @@ nav ul li a {
   Director : 전형동
 */
 
-body{
-    font-family: 'Oswald', sans-serif;
-    color:#FFF;
-    height:350px;
-    background:background: #fc00ff; 
-    background: -webkit-linear-gradient(to right, #00dbde,     #fc00ff); 
-    background: linear-gradient(to right, #00dbde, #fc00ff); 
-}
-h1{
-  margin:20% auto 5% auto;
-  text-align:center; 
-  font-size:4em;
-}
 .overlay{
   width: 100%;
   position: fixed;
@@ -282,7 +396,7 @@ h1{
     color:#fc00ff; 
 }
 
-.open{
+.benner-open{
   font-size:23px;
   cursor:pointer;
   margin: 0 auto;
@@ -293,9 +407,281 @@ h1{
   text-align:center;
   transition:1s;
 }
-.open:hover{
+.benner-open:hover{
   background:#FFF;
   color:#fc00ff; 
 }
 
+/*
+  Footer
+  Date : 20190522
+  Director : 전형동
+*/
+
+.footer-wrapper {
+  
+  bottom: 0;
+  color: #fff;
+  position: fixed;
+  transform: translateY(100%);
+  transition: all ease-in-out 0.5s;
+  width: 100%;
+}
+  
+.button-wrapper {
+  margin: -2.5rem 0 0;
+  text-align: center;
+}
+
+.button-wrapper > button {
+  margin: 0;
+  outline: none;
+}  
+.footer-content {
+  background: #000;
+  padding: 1rem;
+}
+.button.hollow.white {
+  border: 1px solid #fff;
+  color: #fff;
+}
+
+.footer-wrapper.open {
+  transform: translateY(0);
+}
+
+
+.contact-details > h6 {
+  font-size : 1.3em;
+}
+
+.contact-details > p {
+  font-size : 13px;
+}
+
+.input-group > h6 {
+  font-size : 1.3em; 
+  line-height : 3;
+}
+
+.input-group > .input-group-field {
+  width : 100%;
+}
+
+.input-group > textarea {
+  width : 100%;
+}
+
+.footer-center > .baseline > .newsletter > h6 {
+  font-size : 1.3em;
+}
+
+
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form {
+  max-width: 75rem;
+  margin-right: auto;
+  margin-left: auto;
+  color: #e6e6e6;
+  padding: 3.75rem 0;
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form::before, .three-column-footer-contact-form-container .three-column-footer-contact-form::after {
+  display: table;
+  content: ' ';
+  -webkit-flex-basis: 0;
+      -ms-flex-preferred-size: 0;
+          flex-basis: 0;
+  -webkit-order: 1;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form::after {
+  clear: both;
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form a {
+  color: #e6e6e6;
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-left {
+  width: 100%;
+  float: left;
+  padding-right: 0.625rem;
+  padding-left: 0.625rem;
+  display: table;
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-left .baseline {
+  display: table-cell;
+  vertical-align: bottom;
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-left .contact-details p {
+  font-size: 0.8rem;
+  margin-bottom: 0;
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-left .input-group {
+  padding: 2rem 0 0 0;
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-left .input-group input {
+  border-bottom: 2px solid #cacaca;
+}
+
+@media print, screen and (min-width: 40em) {
+  .three-column-footer-contact-form-container .three-column-footer-contact-form .footer-left {
+    padding-right: 0.9375rem;
+    padding-left: 0.9375rem;
+  }
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-left:last-child:not(:first-child) {
+  float: right;
+}
+
+@media print, screen and (min-width: 64em) {
+  .three-column-footer-contact-form-container .three-column-footer-contact-form .footer-left {
+    width: 25%;
+    float: left;
+    padding-right: 0.625rem;
+    padding-left: 0.625rem;
+  }
+}
+
+@media print, screen and (min-width: 64em) and (min-width: 40em) {
+  .three-column-footer-contact-form-container .three-column-footer-contact-form .footer-left {
+    padding-right: 0.9375rem;
+    padding-left: 0.9375rem;
+  }
+}
+
+@media print, screen and (min-width: 64em) {
+  .three-column-footer-contact-form-container .three-column-footer-contact-form .footer-left:last-child:not(:first-child) {
+    float: right;
+  }
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-center {
+  text-align: left;
+  width: 100%;
+  float: left;
+  padding-right: 0.625rem;
+  padding-left: 0.625rem;
+  display: table;
+}
+
+@media print, screen and (min-width: 40em) {
+  .three-column-footer-contact-form-container .three-column-footer-contact-form .footer-center {
+    padding-right: 0.9375rem;
+    padding-left: 0.9375rem;
+  }
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-center:last-child:not(:first-child) {
+  float: right;
+}
+
+@media print, screen and (min-width: 64em) {
+  .three-column-footer-contact-form-container .three-column-footer-contact-form .footer-center {
+    width: 33.33333%;
+    float: left;
+    padding-right: 0.625rem;
+    padding-left: 0.625rem;
+    position: relative;
+    left: 8.33333%;
+  }
+}
+
+@media print, screen and (min-width: 64em) and (min-width: 40em) {
+  .three-column-footer-contact-form-container .three-column-footer-contact-form .footer-center {
+    padding-right: 0.9375rem;
+    padding-left: 0.9375rem;
+  }
+}
+
+@media print, screen and (min-width: 64em) {
+  .three-column-footer-contact-form-container .three-column-footer-contact-form .footer-center:last-child:not(:first-child) {
+    float: right;
+  }
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-center .baseline {
+  display: table-cell;
+  vertical-align: bottom;
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-center .input-group {
+  padding: 0.5rem 0 0 0;
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-center .input-group input {
+  border-bottom: 2px solid #cacaca;
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-center .input-group textarea {
+  border-bottom: 2px solid #cacaca;
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-right {
+  text-align: right;
+  width: 100%;
+  float: left;
+  padding-right: 0.625rem;
+  padding-left: 0.625rem;
+  display: table;
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-right .baseline {
+  display: table-cell;
+  vertical-align: bottom;
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-right h2 {
+  color: #fefefe;
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-right p {
+  font-size: 0.8rem;
+  margin-bottom: 0;
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-right .fa {
+  padding: 1rem 0 1rem 0.2rem;
+}
+
+@media print, screen and (min-width: 40em) {
+  .three-column-footer-contact-form-container .three-column-footer-contact-form .footer-right {
+    padding-right: 0.9375rem;
+    padding-left: 0.9375rem;
+  }
+}
+
+.three-column-footer-contact-form-container .three-column-footer-contact-form .footer-right:last-child:not(:first-child) {
+  float: right;
+}
+
+@media print, screen and (min-width: 64em) {
+  .three-column-footer-contact-form-container .three-column-footer-contact-form .footer-right {
+    width: 25%;
+    float: left;
+    padding-right: 0.625rem;
+    padding-left: 0.625rem;
+  }
+}
+
+@media print, screen and (min-width: 64em) and (min-width: 40em) {
+  .three-column-footer-contact-form-container .three-column-footer-contact-form .footer-right {
+    padding-right: 0.9375rem;
+    padding-left: 0.9375rem;
+  }
+}
+
+@media print, screen and (min-width: 64em) {
+  .three-column-footer-contact-form-container .three-column-footer-contact-form .footer-right:last-child:not(:first-child) {
+    float: right;
+  }
+}
 
