--- a/css/project.css
+++ b/css/project.css
@@ -142,3 +142,34 @@ header.masthead .bg-circle-4 {
     background-repeat: no-repeat;
     width : 100%;
 }
+
+
+/*
+    responsive
+*/
+
+@media handheld, only screen and (min-width: 767px) and (max-width: 1024px) {
+
+    .copy_text {
+        font-weight: 300;
+        font-size: 50px;
+        line-height: 1.1;
+    }
+
+    .project-text-1 > h6 {
+        font-weight: 300;
+        font-size: 35px;
+        line-height: 1.1;   
+    }
+
+}
+
+
+
+
+
+
+
+
+
+
