--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic|Noto+Sans|Noto+Sans+KR&display=swap');
 
 h2 {
 	color: #fff;
@@ -49,12 +50,41 @@ p, span {
     text-align : right;	
 }
 
+/*
+		About-Area
+*/
+
 .about-area {
-	background-image: url(../img/bg_3.jpg);
-	-webkit-background-size: cover;
-	background-size: 40%;
+	background-image: url(../img/product/01.jpg);
+	/* -webkit-background-size: cover; */
+	background-size: 300px;
 	background-repeat: no-repeat;
-	background-position: center center;
+	background-position: center;
+}
+
+.about-area > div > h2{
+	text-align: center;
+}
+
+.price_text {
+	color : #000;
+}
+
+.header_text {
+	color : #000;
+	font-weight: 540;
+	font-size : 3em;
+}
+
+.body_text {
+	color : #404B7D;
+	font-size : 1.4em;
+}
+
+.reply_text {
+	color : #000;
+	font-family: 'Noto Sans KR', sans-serif;
+	font-style: oblique;
 }
 
 .portfolio-area {
@@ -707,3 +737,76 @@ p, span {
 }
 
 
+
+/*
+	slide text
+*/
+#carousel_inner {
+    float: left;
+    width: 350px;
+    height : 200px;
+    overflow: hidden;
+    background: #F0F0F0;
+}
+
+#carousel_ul > li > p {
+	margin-top : 20px;
+    width: 300px;
+    height: 110px;
+}
+
+#carousel_ul {
+    position: relative;
+    left: -210px;
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    width: 9999px;
+    padding-bottom: 10px;
+}
+
+#carousel_ul li {
+    float: left;
+    width: 300px;
+    padding: 0px;
+    height: 200px;
+    background: #fff;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+#carousel_ul li p {
+	text-align: center;
+    margin-bottom: -4px;
+    cursor: pointer;
+    cursor: hand;
+    border: 0px;
+}
+
+#left_scroll, #right_scroll {
+    float: left;
+    height: 130px;
+    width: 35px;
+    margin-top: 50px;
+    margin-left: 20px;
+}
+
+#left_scroll p, #right_scroll p {
+    border: 0;
+ /* remove the default border of linked image */
+/*styling*/
+    cursor: pointer;
+    cursor: hand;
+}
+
+#left_scroll p {
+    width: 25px;
+    height: 25px;
+}
+
+#right_scroll p {
+    width: 25px;
+    height: 25px;
+}
