--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,6 @@ p, span {
 	-webkit-background-size: cover;
 	background-size: cover;
 	background-position: center center;
-	opacity: 0.7;
 	  top: 0;
 	  left: 0;
 	  bottom: 0;
@@ -117,12 +116,17 @@ p, span {
 
 .company-head-text {
 	text-shadow: 5px 3px black;
+	text-align: center;
 }
 
 .company-text {
-	color : black;
-	font-weight: 450;
-	font-size: 25px;
+	/* color : black; */
+	font-weight: 300;
+	font-size: 20px;
+	text-align: center;
+	-webkit-text-stroke-width: 1px;
+   -webkit-text-stroke-color: rgba(0, 0, 255, 0.3);
+   -webkit-text-stroke-color: white;
 }
 
 
@@ -210,7 +214,7 @@ p, span {
 	}
 	.about-area p, .portfolio-area p, .services-area p, .contact-area p {
 		line-height: 130%;
-		font-size: 60px;
+		font-size: 50px;
 	}
 	.contact-area input[type=text], .contact-area input[type=email] {
 		width: 85%;
@@ -264,7 +268,6 @@ p, span {
 		border-radius: 10px;
 		text-align: center;
 		transition: 1s;
-		background: #FFF;
 		color: #000;
 	}
 	.productBtn:hover {
@@ -281,7 +284,7 @@ p, span {
 		text-align: center;
 		transition: 1s;
 		background-color: rgba(255, 255, 255, 0.5);
-		color: #ECD123;
+		color: #000;
 	}
 }
 
@@ -305,7 +308,7 @@ p, span {
 	}
 	.about-area p, .portfolio-area p, .services-area p, .contact-area p {
 		line-height: 130%;
-		font-size: 60px;
+		font-size: 50px;
 	}
 	.contact-area input[type=text], .contact-area input[type=email] {
 		width: 85%;
@@ -358,7 +361,6 @@ p, span {
 		border-radius: 10px;
 		text-align: center;
 		transition: 1s;
-		background: #FFF;
 		color: #000;
 	}
 	.productBtn:hover {
@@ -375,16 +377,10 @@ p, span {
 		text-align: center;
 		transition: 1s;
 		background-color: rgba(255, 255, 255, 0.5);
-		color: #ECD123;
+		color: #000;
 	}
 }
 
-
-@media handheld, only screen and (max-width: 1024px) {
-	.home-area {
-		background-size: cover;
-	    background-position: center center;
-    }
 }
 
 /*
