--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 *
 */
 @import url('font-awesome.min.css');
-@import url('ionicons.min.css');
+@import url('https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css');
 @import url('bootstrap.min.css');
 @import url('animate.css');
 @import url('swipebox.css');
